test/files/neg/nullary-override-3c/A_1.scala
// scalac: -Werror -Xsource:3
//
class A { def x: Int = 3 }
